# kerrigan-sdk

./: .gitignore  Cargo.toml  README.md  SHIELD_PLAN.md
.github/workflows/: ci.yml  release.yml
bridge/: Cargo.toml  README.md
bridge/src/: api.rs  cache.rs  config.rs  index.rs  main.rs  rpc.rs  scanner.rs  shield_cache.rs  stream.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs  network.rs  sapling_params.rs  sapling_sync.rs  storage.rs  sync_service.rs  term.rs
sdk/: Cargo.toml  README.md
sdk/src/: bip32.rs  bip39.rs  encoding.rs  fees.rs  keys.rs  lib.rs  params.rs  script.rs  sync.rs  transaction.rs  wallet.rs  wasm.rs
sdk/src/sapling/: builder.rs  fees.rs  kerrigan_tx.rs  keys.rs  mod.rs  network.rs  notes.rs  prover.rs  sync.rs  tree.rs
sdk/tests/: e2e.rs  sapling_e2e.rs
src/: bip32.rs  bip39.rs  bip39_wordlist.rs  encoding.rs  fees.rs  keys.rs  lib.rs  main.rs  network.rs  script.rs  sync.rs  term.rs  transaction.rs  wallet.rs
tests/: bip39_crosscheck.rs  e2e.rs
webwallet/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
webwallet/src/: crypto.js  main.js  network.js  router.js  sapling-params.js  sdk.js  state.js  storage.js  sync.js  templates.js  utils.js  worker-pool.js  worker.js
webwallet/src/components/: icons.js  markdown.js  modal.js  qr-code.js  toast.js
webwallet/src/css/: ai.css  animations.css  components.css  layout.css  theme.css  views.css
webwallet/src/views/: activity.js  ai.js  dashboard.js  login.js  maturity.js  memo.js  receive.js  send.js  settings.js  welcome.js
