[package]
name = "kerrigan-wallet"
version = "0.1.0"
edition = "2021"
description = "Kerrigan Network light wallet CLI"
license = "MIT"

[[bin]]
name = "kerrigan-wallet"
path = "src/main.rs"

[dependencies]
# Audited cryptographic primitives
secp256k1 = { version = "0.29", features = ["global-context"] }
sha2 = "0.10"
ripemd = "0.1"
hmac = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
ureq = "2"

# Security
zeroize = { version = "1.8", features = ["derive"] }

# System
dirs = "5"
machine-uid = "0.5"
getrandom = "0.2"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
