[package]
name = "kerrigan-sdk"
version = "0.3.0"
edition = "2021"
description = "Kerrigan Network SDK — pure-Rust wallet primitives with Sapling shield support"
license = "MIT"

[dependencies]
# Audited cryptographic primitives
secp256k1 = { version = "0.29", features = ["global-context"] }
sha2 = "0.10"
ripemd = "0.1"
hmac = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security
zeroize = { version = "1.8", features = ["derive"] }

# Entropy
getrandom = "0.2"

# Sapling shielded transactions (librustpivx — PIVX fork of zcash libs)
sapling = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }
pivx_primitives = { package = "zcash_primitives", git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", default-features = false, features = ["transparent-inputs", "circuits", "std", "non-standard-fees"] }
pivx_protocol = { package = "zcash_protocol", git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", default-features = false }
zcash_keys = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", features = ["unstable", "sapling"] }
zcash_transparent = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }
bellman = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase", features = ["groth16"] }
zcash_note_encryption = "0.4"
incrementalmerkletree = "0.7"
rand_core = { version = "0.6", features = ["std"] }
jubjub = "0.10"
