[package]
name = "kerrigan-sdk"
version = "0.4.0"
edition = "2021"
description = "Kerrigan Network SDK — pure-Rust wallet primitives with Sapling shield support"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
# Audited cryptographic primitives
secp256k1 = { version = "0.29", features = ["global-context"] }
sha2 = "0.10"
ripemd = "0.1"
hmac = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security
zeroize = { version = "1.8", features = ["derive"] }

# Entropy
getrandom = { version = "0.2", features = ["js"] }

# Sapling shielded transactions — upstream crates matching Kerrigan node FFI
sapling = { package = "sapling-crypto", version = "0.5", features = ["temporary-zcashd", "circuit", "std"], default-features = false }
zcash_primitives = { version = "0.26", features = ["temporary-zcashd", "std"], default-features = false }
zcash_protocol = { version = "0.7", features = ["local-consensus"] }
# zcash_proofs not included — requires filesystem (home crate), incompatible with WASM
zcash_note_encryption = "0.4"
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
incrementalmerkletree = "0.8"
zcash_keys = { version = "0.7", features = ["sapling"] }
rand_core = { version = "0.6", features = ["std"] }
jubjub = "0.10"
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = "0.6"
wasm-bindgen-rayon = { version = "1.2", optional = true }

[features]
default = []
multicore = ["wasm-bindgen-rayon"]
